# instdp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
instdp/: __init__.py  dispatcher.py
instdp/filters/: __init__.py  base.py  exception.py  item_type.py  utils.py
instdp/minix/: direct.py
instdp/mixins/: direct.py  direct_api.py
instdp/types/: __init__.py  base.py  enums.py  handler.py
