[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "instdp"
dynamic = ["version"]
#readme = "README.md"
classifiers = [
    "Development Status :: 1 - Alpha",
    "Programming Language :: Python :: 3",
]
authors = [
    {name = "teri_anric", email = "2005ahi2005@gmail.com"}
]
requires-python = ">=3.8"
dependencies = {file = "requirements.txt"}
#license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/Teri-anric/instdp"
Repository = "https://github.com/Teri-anric/instdp"

#[project.optional-dependencies]
#dev = [
#
#]

#[tool.setuptools.packages.find]
#exclude = []
#
#[tool.setuptools]
#include-package-data = false
#
#[tool.setuptools.package-data]
#my_package = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "instdp.VERSION"}
